--- a/w3school/1-image-change-attr.html
+++ b/w3school/1-image-change-attr.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h3>Javascript can change image via attribute</h3>
+    <h3>Javascript can change image via attributedfsfsdfs</h3>
     <button type="button" onclick="document.getElementById('myImage').src='images/pic_bulbon.gif'">Bulb On</button>
     <img src="images/pic_bulboff.gif" id="myImage" alt="image">
     <button type="button" onclick="document.getElementById('myImage').src='images/pic_bulboff.gif'">Bulb Off</button>
