--- a/w3school/6-d-variables.html
+++ b/w3school/6-d-variables.html
@@ -17,7 +17,7 @@
         var carName = "Volve",
             person = "Rahul",
             price = 2000;
-        document.getElementById("demo").innerHTML = person;
+        document.getElementById("demo").innerHTML = carName;
     </script>
 </body>
 
