--- a/w3school/13-a-function.html
+++ b/w3school/13-a-function.html
@@ -8,15 +8,16 @@
 </head>
 
 <body>
-    <h2>Javascript Function</h2>
-    <p>This example calls a function to convert from Fahrenheit to Celcius:</p>
+    <h1>Javascript Function</h1>
+    <p>This example calls a function which performs a calculation, and returns the result:</p>
+
     <p id="demo"></p>
 
     <script>
-        function toCelcius(f) {
-            return (5 / 9) * (f - 32);
+        function myFunction(p1, p2) {
+            return p1 * p2;
         }
-        document.getElementById("demo").innerHTML = toCelcius(77);
+        document.getElementById("demo").innerHTML = myFunction(5, 6);
     </script>
 </body>
 
