--- a/w3school/14-c-object-method.html
+++ b/w3school/14-c-object-method.html
@@ -21,7 +21,7 @@
             }
         };
         // Display data from the object
-        document.getElementById("demo").innerHTML = ${person.firstName};
+        document.getElementById("demo").innerHTML = person.fullName();
     </script>
 </body>
 </html>
