--- a/w3school/15-a-array.html
+++ b/w3school/15-a-array.html
@@ -11,8 +11,7 @@
 
     <script>
         var cars = ["BMW", "Scorpio", "Bolero"];
-        var last = cars[cars.length - 1];
-        document.getElementById("demo").innerHTML = last;
+        document.getElementById("demo").innerHTML = cars;
     </script>
 </body>
 </html>
